unpackaged/main/default/objects/ROE_Rule__c/ROE_Rule__c.object-meta.xml
<CustomObject>
    <label>ROE Rule</label>
    <nameField>
        <label>ROE Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ROE Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>