unpackaged/main/default/objects/ROE_Rule__c/fields/Account_Max_Days_Without_Activity__c.field-meta.xml
<CustomField>
    <fullName>Account_Max_Days_Without_Activity__c</fullName>
    <label>Account - Max Days Without Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>