unpackaged/main/default/objects/ROE_Rule__c/fields/Account_Max_Hold_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Account_Max_Hold_Time_Days__c</fullName>
    <label>Account - Max Hold Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>