unpackaged/main/default/objects/ROE_Rule__c/fields/Account_Max_Number_of_Holds__c.field-meta.xml
<CustomField>
    <fullName>Account_Max_Number_of_Holds__c</fullName>
    <label>Account - Max Number of Holds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>