unpackaged/main/default/objects/ROE_Rule__c/fields/Attributable_Region_Subteams__c.field-meta.xml
<CustomField>
    <fullName>Attributable_Region_Subteams__c</fullName>
    <label>Attributable Region-Subteams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region_Subteams</valueSetName>
    </valueSet>
</CustomField>