unpackaged/main/default/objects/ROE_Rule__c/fields/Can_Create_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Can_Create_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Create Opportunities?</label>
    <type>Checkbox</type>
</CustomField>