unpackaged/main/default/objects/ROE_Rule__c/fields/Can_Override_Sourced_By__c.field-meta.xml
<CustomField>
    <fullName>Can_Override_Sourced_By__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Override Sourced By?</label>
    <type>Checkbox</type>
</CustomField>