unpackaged/main/default/objects/ROE_Rule__c/fields/Current_New_Ramp__c.field-meta.xml
<CustomField>
    <fullName>Current_New_Ramp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current New Ramp</label>
    <referenceTo>Role_Ramp__c</referenceTo>
    <relationshipLabel>ROE Rules (Current New Ramp)</relationshipLabel>
    <relationshipName>ROE_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>