unpackaged/main/default/objects/ROE_Rule__c/fields/Current_Transfer_Ramp__c.field-meta.xml
<CustomField>
    <fullName>Current_Transfer_Ramp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Transfer Ramp</label>
    <referenceTo>Role_Ramp__c</referenceTo>
    <relationshipLabel>ROE Rules (Current Transfer Ramp)</relationshipLabel>
    <relationshipName>ROE_Rules2</relationshipName>
    <type>Lookup</type>
</CustomField>