unpackaged/main/default/objects/ROE_Rule__c/fields/DriveConnect_License_Status__c.field-meta.xml
<CustomField>
    <fullName>DriveConnect_License_Status__c</fullName>
    <defaultValue>&quot;Not Licensed&quot;</defaultValue>
    <label>DriveConnect: License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DriveConnect_License_Status</valueSetName>
    </valueSet>
</CustomField>