unpackaged/main/default/objects/ROE_Rule__c/fields/Eligible_Queues__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Queues__c</fullName>
    <label>Eligible Queues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Ticket_Queues</valueSetName>
    </valueSet>
</CustomField>