unpackaged/main/default/objects/ROE_Rule__c/fields/Employee_Level__c.field-meta.xml
<CustomField>
    <fullName>Employee_Level__c</fullName>
    <label>Employee Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RL1</fullName>
            </value>
            <value>
                <fullName>RL2</fullName>
            </value>
            <value>
                <fullName>RL3</fullName>
            </value>
            <value>
                <fullName>RL4</fullName>
            </value>
            <value>
                <fullName>RL5</fullName>
            </value>
            <value>
                <fullName>RL6</fullName>
            </value>
            <value>
                <fullName>RL7</fullName>
            </value>
            <value>
                <fullName>RL8</fullName>
            </value>
            <value>
                <fullName>RM1</fullName>
            </value>
            <value>
                <fullName>RM2</fullName>
            </value>
            <value>
                <fullName>RM3</fullName>
            </value>
            <value>
                <fullName>RM4</fullName>
            </value>
            <value>
                <fullName>RM5</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>