unpackaged/main/default/objects/ROE_Rule__c/fields/Finance_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Role_Name__c</fullName>
    <label>Finance Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>