unpackaged/main/default/objects/ROE_Rule__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <defaultValue>&quot;Individual&quot;</defaultValue>
    <label>Goal Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Goal_Type</valueSetName>
    </valueSet>
</CustomField>