unpackaged/main/default/objects/ROE_Rule__c/fields/Gong_Permission_Profile__c.field-meta.xml
<CustomField>
    <fullName>Gong_Permission_Profile__c</fullName>
    <label>Gong Permission Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gong_Permission_Profile</valueSetName>
    </valueSet>
</CustomField>