unpackaged/main/default/objects/ROE_Rule__c/fields/Include_in_Forecast_Role_Map__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Forecast_Role_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Forecast Role Map?</label>
    <type>Checkbox</type>
</CustomField>