unpackaged/main/default/objects/ROE_Rule__c/fields/LinkedIn_SN_License__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_SN_License__c</fullName>
    <label>LinkedIn SN: License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LinkedIn_SN_Licenses</valueSetName>
    </valueSet>
</CustomField>