unpackaged/main/default/objects/ROE_Rule__c/fields/Marketing_User__c.field-meta.xml
<CustomField>
    <fullName>Marketing_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing User</label>
    <type>Checkbox</type>
</CustomField>