unpackaged/main/default/objects/ROE_Rule__c/fields/Num_Target_Accounts_in_Territory__c.field-meta.xml
<CustomField>
    <fullName>Num_Target_Accounts_in_Territory__c</fullName>
    <label># Target Accounts in Territory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>