unpackaged/main/default/objects/ROE_Rule__c/fields/Role_Family__c.field-meta.xml
<CustomField>
    <fullName>Role_Family__c</fullName>
    <label>Role Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>