unpackaged/main/default/objects/ROE_Rule__c/fields/SE_Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>SE_Assignment_Method__c</fullName>
    <label>SE Assignment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SE_Assignment_Methods</valueSetName>
    </valueSet>
</CustomField>