unpackaged/main/default/objects/ROE_Rule__c/fields/Slack_Notifications_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notifications_Pipeline__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Slack Notifications: Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Slack_Pipeline_Notifications</valueSetName>
    </valueSet>
</CustomField>