unpackaged/main/default/objects/ROE_Rule__c/fields/Update_active_users__c.field-meta.xml
<CustomField>
    <fullName>Update_active_users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update active users?</label>
    <type>Checkbox</type>
</CustomField>