unpackaged/main/default/objects/ROE_Rule__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>User Role</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>