unpackaged/main/default/objects/ROE_Rule__c/fields/User_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Role_ID__c</fullName>
    <label>User Role ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>