unpackaged/main/default/objects/ROE_Rule__c/fields/Variable_Incentive_Plan__c.field-meta.xml
<CustomField>
    <fullName>Variable_Incentive_Plan__c</fullName>
    <label>Variable Incentive Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Variable_Incentive_Plans</valueSetName>
    </valueSet>
</CustomField>