unpackaged/main/default/objects/ROE_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Num_Active_Users__c</columns>
    <columns>Opportunity_Segment__c</columns>
    <columns>Employee_Level__c</columns>
    <columns>Role_Family__c</columns>
    <columns>Level__c</columns>
    <columns>Current_New_Ramp__c</columns>
    <columns>Region__c</columns>
    <columns>Subteam__c</columns>
    <columns>SE_Assignment_Method__c</columns>
    <columns>Account_Max_Owned_Total_Num__c</columns>
    <columns>Account_Claim_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Sales Development</value>
    </filters>
    <label>All</label>
</ListView>