unpackaged/main/default/objects/ROE_Rule__c/listViews/Copy_of_Role_Attribution.listView-meta.xml
<ListView>
    <fullName>Copy_of_Role_Attribution</fullName>
    <columns>NAME</columns>
    <columns>Num_Active_Users__c</columns>
    <columns>SE_Assignment_Method__c</columns>
    <columns>Opportunity_Segment__c</columns>
    <columns>Attributable_Region_Subteams__c</columns>
    <columns>Team__c</columns>
    <columns>Subteam__c</columns>
    <columns>Level__c</columns>
    <columns>Territory__c</columns>
    <columns>Region__c</columns>
    <columns>User_Role_Short_Name__c</columns>
    <columns>Role_Family__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Sales Engineering</value>
    </filters>
    <label>SE User Roles</label>
</ListView>