unpackaged/main/default/objects/ROE_Rule__c/listViews/TAM_Attribution.listView-meta.xml
<ListView>
    <fullName>TAM_Attribution</fullName>
    <columns>NAME</columns>
    <columns>Num_Active_Users__c</columns>
    <columns>Opportunity_Segment__c</columns>
    <columns>Attributable_Region_Subteams__c</columns>
    <columns>Team__c</columns>
    <columns>Subteam__c</columns>
    <columns>Level__c</columns>
    <columns>Territory__c</columns>
    <columns>Region__c</columns>
    <columns>User_Role_Short_Name__c</columns>
    <columns>Role_Family__c</columns>
    <columns>Customer_Success_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Technical Account Management</value>
    </filters>
    <label>TAM User Roles</label>
</ListView>